--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,5 @@
-@import 'header.scss';
-@import 'popup.scss';
-
-
-* {
-  box-sizing: border-box;
-}
-
-body{
-  padding: 0;
-  margin: 0;
-  font-family: Roboto;
-}
+@import './common.scss';
+@import './header.scss';
+@import './schedule.scss';
+@import './popup.scss';
+@import './event.scss'
