--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import './common.scss';
 @import './header.scss';
-@import './schedule.scss';
+//@import './schedule.scss';
 @import './popup.scss';
-@import './event.scss'
+@import './event.scss';
+@import './redLine.scss';
+@import './block.scss';
