--- a/src/styles/block.scss
+++ b/src/styles/block.scss
@@ -1,16 +1,29 @@
-.block {
+.block{
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-
+  justify-content: center;
 }
-
+.event{
+  margin-bottom: 100px;
+}
 .column {
-  position: relative;
-  width: 100%;
-  height: 100px;
+  display: flex;
+  width: 11%;
+  color: #70757a;
+  flex-direction: column;
+  height: 50px;
   border-top: 1px solid #dadce0 ;
   border-bottom: 1px solid #dadce0;
-  border-left: 1px solid #dadce0;
+  border-left: 3px solid #dadce0;
   border-right: 1px solid #dadce0 ;
+  
 }
+
+.week {
+  display: flex;
+}
+.day {
+  display: flex;
+  flex-direction: column;
+
+}
+
