--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,6 @@
 @import './common.scss';
 @import './header.scss';
-//@import './schedule.scss';
+@import './schedule.scss';
 @import './popup.scss';
 @import './event.scss';
 @import './redLine.scss';
-@import './block.scss';
