--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,11 @@ body {
   border-left: 1px solid #dadce0;
 }
 
+.day_nameDays {
+  padding-top: 8px;
+  font-size: 20px;
+}
+
 .display-none {
   display: none;
 }
@@ -320,11 +325,8 @@ body {
 }
 
 .redLine {
-  display: flex;
   position: absolute;
-  align-items: center;
-  justify-content: center;
-  width: 10%;
+  width: 100%;
   height: 2px;
   background-color: red;
 }
