--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ body {
 }
 .popup__picker {
   display: flex;
-  margin: 45px 0;
+  margin: 45px;
   align-items: center;
   position: relative;
 }
@@ -219,6 +219,10 @@ body {
   position: absolute;
   right: 10px;
   top: -3px;
+}
+
+.popup__description {
+  margin-left: 50px;
 }
 
 .event__name {
@@ -289,7 +293,7 @@ body {
 
 .multilineText {
   position: absolute;
-  left: 10px;
+  left: 55px;
   width: 30px;
   height: 30px;
 }
