--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,15 +1,11 @@
 .day-event {
     position: absolute;
-    min-height: content;
     width: 100%;
     padding: 4px;
     border-radius: 3px;
     background-color: #4183f1;
     font-size: 14px;
     color: white;
-    
-    &__title {
-        height: 16px;
-        overflow: hidden;
-    }
+    overflow: hidden;
+    z-index: 1;
 }
