--- a/styles.css
+++ b/styles.css
@@ -316,17 +316,14 @@ body {
 
 .day-event {
   position: absolute;
-  min-height: content;
   width: 100%;
   padding: 4px;
   border-radius: 3px;
   background-color: #4183f1;
   font-size: 14px;
   color: white;
-}
-.day-event__title {
-  height: 16px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .redLine {
