--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,6 +1,7 @@
 .day-event {
     position: absolute;
-    width: 100%;
+    width: 15%;
+    margin-left: 61px;
     padding: 4px;
     border-radius: 3px;
     background-color: #4183f1;
