--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,5 +1,8 @@
 .day-event {
     position: absolute;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 15%;
     margin-left: 61px;
     padding: 4px;
