--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,9 @@ body {
 
 .day-event {
   position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   width: 15%;
   margin-left: 61px;
   padding: 4px;
