--- a/styles.css
+++ b/styles.css
@@ -155,23 +155,23 @@ body {
 .hour {
   height: 42px;
   width: 55px;
-}
-.hour__text {
   display: block;
-  margin: -9px 0 0 10px;
+  margin: 21px 0 0 8px;
 }
 
 .calendar__week {
   display: flex;
   width: 100%;
-  padding-left: 5px;
-  background: repeating-linear-gradient(180deg, #dadce0, #dadce0 1px, #fff 1px, #fff 42px);
 }
 
 .column-day {
   position: relative;
   width: 100%;
+}
+.column-day__item {
+  height: 60px;
   border-left: 1px solid #dadce0;
+  border-bottom: 1px solid #dadce0;
 }
 
 .day_nameDays {
